# FLIM_phasors

./: .gitignore  LICENSE  README.md  flim_phasor_gui.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docs.yml  test.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: canvas.rst  cli.rst  core.rst  gui.rst  index.rst  io_session.rst
examples/: headless_gmm.sample.txt
src/flim_phasors/: __init__.py  __main__.py  analysis.py  app.py  batch_cli.py  busy.py  calibration.py  calibration_io.py  constants.py  cursors_io.py  data.py  export_bundle.py  io.py  lif_io.py  memory_est.py  session_bundle_io.py  session_io.py  utils.py
src/flim_phasors/canvas/: __init__.py  image.py  phasor.py  ref_preview.py
src/flim_phasors/gui/: __init__.py  enhancements.py  lif_dialog.py  main_window.py  processing.py  theme.py
tests/: test_analysis.py  test_calibration_io.py  test_export_bundle.py  test_lif_io.py  test_processing_settings.py  test_session_bundle_io.py  test_utils_io.py
