[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flim-phasors"
version = "0.2.0"
description = "Interactive FLIM phasor analysis and segmentation (PTU & TIFF)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "PySide6>=6.5",
    "phasorpy>=0.10,<0.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
pawflim = ["pawflim"]
excel = ["openpyxl>=3.1"]
all = ["pawflim", "openpyxl>=3.1"]

[project.scripts]
flim-phasor-gui = "flim_phasors.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
